apps/backend/full_error.log
E:\WEB-DEVELOPMENT\PROJECTS\business-platform\banijjik\apps\backend\src\shared\utils\common.utils.ts:1
import { makeSlug as kernelMakeSlug } from "@banijjik/shared-kernel";
         ^
SyntaxError: The requested module '@banijjik/shared-kernel' does not provide an export named 'makeSlug'
    at #_instantiate (node:internal/modules/esm/module_job:254:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:671:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.11.1
